...
        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "模板插圖" } }
      }
    },
    "语言" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : { "stringUnit" : { "state" : "translated", "value" : "Language" } },
        "zh-Hans" : { "stringUnit" : { "state" : "translated", "value" : "语言" } },
        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "語言" } }
      }
    },
    "跟随系统" : {
      "extractionState" : "manual",
...
    "分类" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Categories"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "分类"
          }
        },
        "zh-Hant" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "分類"
          }
        }
      }
    },
    "分类 %@" : {
      "extractionState" : "manual",
...
            "state" : "translated",
            "value" : "日曆"
          }
        }
      }
    },
    "日子" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Days"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "日子"
...
